# NGSpiceInterface

./: CMakeLists.txt  NGSpiceInterface.cpp  NGSpiceInterface.hpp  README.md  main.cpp  rcf.cir  testArray.cir  testCircuit.cir
